WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187952
[Web Animations] Crash when setting "animation: none" after clearing an animation's effect
https://bugs.webkit.org/show_bug.cgi?id=187952
Summary
[Web Animations] Crash when setting "animation: none" after clearing an anima...
Antoine Quint
Reported
2018-07-24 03:48:40 PDT
[Web Animations] Crash when setting "animation: none" after clearing an animation's effect
Attachments
Patch
(5.05 KB, patch)
2018-07-24 03:55 PDT
,
Antoine Quint
dino
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews204 for win-future
(12.91 MB, application/zip)
2018-07-24 07:51 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2018-07-24 03:55:09 PDT
Created
attachment 345653
[details]
Patch
EWS Watchlist
Comment 2
2018-07-24 07:51:20 PDT
Comment on
attachment 345653
[details]
Patch
Attachment 345653
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8638376
New failing tests: webanimations/setting-css-animation-none-after-clearing-effect.html
EWS Watchlist
Comment 3
2018-07-24 07:51:32 PDT
Created
attachment 345676
[details]
Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Antoine Quint
Comment 4
2018-07-24 12:30:56 PDT
Committed
r234163
: <
https://trac.webkit.org/changeset/234163
>
Radar WebKit Bug Importer
Comment 5
2018-07-24 12:32:08 PDT
<
rdar://problem/42551741
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug